--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -7,4 +7,62 @@
     android:layout_height="match_parent"
     tools:context=".AddActivity">
 
+    <RadioGroup
+        android:id="@+id/priority_group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <RadioButton
+            android:id="@+id/low_priority"
+            android:layout_width="65dp"
+            android:layout_height="52dp"
+            android:layout_marginEnd="72dp"
+            android:text="Low"
+            app:layout_constraintEnd_toStartOf="@+id/medium_priority"
+            app:layout_constraintTop_toBottomOf="@+id/description_input" />
+
+        <RadioButton
+            android:id="@+id/medium_priority"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="84dp"
+            android:text="Medium"
+            app:layout_constraintEnd_toStartOf="@+id/high_priority"
+            app:layout_constraintTop_toBottomOf="@+id/description_input" />
+
+        <RadioButton
+            android:id="@+id/high_priority"
+            android:layout_width="71dp"
+            android:layout_height="49dp"
+            android:text="High"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/description_input" />
+
+    </RadioGroup>
+
+    <Button
+        android:id="@+id/add_button"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:text="Add Task"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description_input" />
+
+    <EditText
+        android:id="@+id/description_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Task Description"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/priority_group" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
